# orders-pars

./: .gitignore  README.md  celerybeat-schedule  pyproject.toml  requirements.txt
goszakupki/: orders.py
goszakupki/goszakupki_2023-04-05/: products_goszakupki_2023-04-05.json
goszakupki/goszakupki_2023-04-06/: products_goszakupki_2023-04-06.json
icetrade/: orders.py
icetrade/icetrade_2023-04-05/: products_icetrade_2023-04-05.json
icetrade/icetrade_2023-04-06/: products_icetrade_2023-04-06.json
orders/: .env.template  celerybeat-schedule  secret_settings.py  utils.py
orders/orders/: celery.py  settings.py  urls.py
orders/ordlist/: apps.py  forms.py  models.py  task_icetrader.py  tasks.py  utils.py  views.py
orders/ordlist/migrations/: 0001_initial.py
orders/ordlist/templates/ordlist/: base.html
orders/static/css/: style.css
settings/: filters.py  params.py
